# rainbird-cli

./: .gitignore  CLAUDE.md  README.md  core.py  formatting.py  lib.py  pyproject.toml  rainbird.py  rainbird_mcp.py
.claude/skills/rainbird/: SKILL.md
commands/: control.py  info.py  schedule.py  status.py
tests/: test_claude_desktop_config.py  test_claude_md.py  test_commands.py  test_formatting.py  test_lib.py  test_rainbird_mcp.py  test_wrapper.py
